# clang-rs-binding

./: .clang-format  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
src/: clang.rs  compilation_database.rs  foo.cpp  index.rs  lib.rs  utility.rs
tests/: compiledb.rs  traverse_ast.rs
tests/artifacts/: traverse_ast.test_oracle
tests/artifacts/compiledb/: CMakeLists.txt  compiledb.test_oracle  main.cpp
tests/artifacts/traverse_ast/: traverse_ast.cpp
