[package]
name = "clang-transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# export LLVM_CONFIG_PATH=/path/to/llvm-config-bin
clang-sys = {version="1.4.0", features=["runtime", "clang_15_0"]}